js/src/tests/test262/language/import/import-defer/errors/get-self-while-evaluating.js
import
defer
*
as
self
from
"
.
/
get
-
self
-
while
-
evaluating
.
js
"
;
assert
.
throws
(
TypeError
(
)
=
>
self
.
foo
)
;
reportCompare
(
0
0
)
;
